--- a/mainScene2.fxml
+++ b/mainScene2.fxml
@@ -73,17 +73,42 @@
       <content>
         <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                <children>
-                  <Label fx:id="resultLabel" alignment="TOP_LEFT" layoutX="10.0" layoutY="10.0" prefHeight="500.0" prefWidth="780.0" text="Label" wrapText="true">
+                  <Label fx:id="resultLabel" alignment="TOP_LEFT" layoutX="10.0" layoutY="10.0" prefHeight="500.0" prefWidth="780.0" text="Label" wrapText="true" AnchorPane.bottomAnchor="61.0" AnchorPane.leftAnchor="10.0" AnchorPane.rightAnchor="10.0" AnchorPane.topAnchor="10.0">
                      <font>
-                        <Font name="System Bold" size="16.0" />
+                        <Font name="System Bold" size="20.0" />
                      </font>
                   </Label>
-                  <Button fx:id="clearResultLabelButton" layoutX="573.0" layoutY="520.0" mnemonicParsing="false" onAction="#clearResultLabel" prefHeight="37.0" prefWidth="100.0" text="Очистить">
+                  <Button fx:id="clearResultLabelButton" layoutX="573.0" layoutY="520.0" mnemonicParsing="false" onAction="#clearResultLabel" prefHeight="37.0" prefWidth="100.0" text="Очистить" AnchorPane.bottomAnchor="14.0" AnchorPane.rightAnchor="127.0">
                      <font>
                         <Font name="System Bold" size="16.0" />
                      </font>
                   </Button>
-                  <Button fx:id="downloadResultLabelButton" layoutX="686.0" layoutY="520.0" mnemonicParsing="false" onAction="#downloadResultLabel" prefHeight="37.0" prefWidth="100.0" text="Скачать">
+                  <Button fx:id="downloadResultLabelButton" layoutX="686.0" layoutY="520.0" mnemonicParsing="false" onAction="#downloadResultLabel" prefHeight="37.0" prefWidth="100.0" text="Скачать" AnchorPane.bottomAnchor="14.0" AnchorPane.rightAnchor="14.0">
+                     <font>
+                        <Font name="System Bold" size="16.0" />
+                     </font>
+                  </Button>
+                  <Button fx:id="font12Button" layoutX="14.0" layoutY="520.0" mnemonicParsing="false" onAction="#setResultLabelFont12" prefHeight="37.0" prefWidth="41.0" text="12" AnchorPane.bottomAnchor="14.0">
+                     <font>
+                        <Font name="System Bold" size="16.0" />
+                     </font>
+                  </Button>
+                  <Button fx:id="font14Button" layoutX="69.0" layoutY="520.0" mnemonicParsing="false" onAction="#setResultLabelFont14" prefHeight="37.0" prefWidth="41.0" text="14" AnchorPane.bottomAnchor="14.0">
+                     <font>
+                        <Font name="System Bold" size="16.0" />
+                     </font>
+                  </Button>
+                  <Button fx:id="font16Button" layoutX="124.0" layoutY="520.0" mnemonicParsing="false" onAction="#setResultLabelFont16" prefHeight="37.0" prefWidth="41.0" text="16" AnchorPane.bottomAnchor="14.0">
+                     <font>
+                        <Font name="System Bold" size="16.0" />
+                     </font>
+                  </Button>
+                  <Button fx:id="font18Button" layoutX="179.0" layoutY="520.0" mnemonicParsing="false" onAction="#setResultLabelFont18" prefHeight="37.0" prefWidth="41.0" text="18" AnchorPane.bottomAnchor="14.0">
+                     <font>
+                        <Font name="System Bold" size="16.0" />
+                     </font>
+                  </Button>
+                  <Button fx:id="font20Button" layoutX="234.0" layoutY="520.0" mnemonicParsing="false" onAction="#setResultLabelFont20" prefHeight="37.0" prefWidth="41.0" text="20" AnchorPane.bottomAnchor="14.0">
                      <font>
                         <Font name="System Bold" size="16.0" />
                      </font>
@@ -270,7 +295,7 @@
                         <Font name="System Bold" size="20.0" />
                      </font>
                   </Text>
-                  <Text fx:id="settingsText3" layoutX="33.0" layoutY="403.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Всего сохранённых логов: %d (%d KB)" wrappingWidth="429.0">
+                  <Text fx:id="settingsText3" layoutX="33.0" layoutY="403.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Всего сохранённых логов: %d (%s KB)" wrappingWidth="429.0">
                      <font>
                         <Font name="System Bold" size="20.0" />
                      </font>
@@ -286,7 +311,7 @@
                         <Font name="System Bold" size="20.0" />
                      </font>
                   </Text>
-                  <Text fx:id="settingsText6" layoutX="33.0" layoutY="508.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Всего сохранённых уведомлений: %d (%d KB)" wrappingWidth="501.0">
+                  <Text fx:id="settingsText6" layoutX="33.0" layoutY="508.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Всего сохранённых уведомлений: %d (%s KB)" wrappingWidth="501.0">
                      <font>
                         <Font name="System Bold" size="20.0" />
                      </font>
