--- a/src/armaturkin/fxml/main_scene.fxml
+++ b/src/armaturkin/fxml/main_scene.fxml
@@ -9,6 +9,7 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.effect.GaussianBlur?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.shape.Circle?>
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
@@ -392,6 +393,16 @@
                         <Font name="System Bold" size="16.0" />
                      </font>
                   </Button>
+               </children>
+            </AnchorPane>
+        </content>
+      </Tab>
+      <Tab text="Untitled Tab">
+        <content>
+          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+               <children>
+                  <Circle fx:id="cir" fill="DODGERBLUE" layoutX="462.0" layoutY="367.0" onMouseClicked="#addNote" radius="100.0" stroke="BLACK" strokeType="INSIDE" />
+                  <HBox fx:id="ar" layoutX="14.0" layoutY="14.0" prefHeight="100.0" prefWidth="773.0" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="14.0" />
                </children>
             </AnchorPane>
         </content>
