--- a/src/armaturkin/fxml/main.fxml
+++ b/src/armaturkin/fxml/main.fxml
@@ -20,7 +20,7 @@
   <tabs>
     <Tab text="Посчитать спецификацию">
       <content>
-        <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+        <AnchorPane fx:id="anchorPane1" minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                <children>
                   <Button fx:id="infoButton" layoutX="72.0" layoutY="498.0" mnemonicParsing="false" onAction="#toggleInfoLabelOpacity" prefHeight="37.0" prefWidth="67.0" text="Инфо">
                      <font>
@@ -64,11 +64,6 @@
                   </Button>
                   <TextField fx:id="tableHead" layoutX="206.0" layoutY="498.0" prefHeight="25.0" prefWidth="400.0" promptText="Введите шапку таблицы (по-умолчанию будет пустая строка)" />
                   <TextField fx:id="backgroundReinforcement" layoutX="206.0" layoutY="463.0" prefHeight="25.0" prefWidth="400.0" promptText="Введите фоновую арматуру (по-умолчанию фон не будет посчитан)" />
-                  <Label fx:id="infoLabel" alignment="CENTER" layoutX="14.0" layoutY="60.0" prefHeight="392.0" prefWidth="560.0" style="-fx-background-color: BLACK; -fx-border-color: BLUE; -fx-border-width: 5; -fx-border-radius: 20; -fx-background-radius: 25;" text="Шаблон ввода для фоновой арматуры:&#10;диаметр(мм)-общая длина(м, десятичный разделитель - точка)&#10;Примеры:&#10;10-145 (диаметр 10 мм, длина 145 м)&#10;12-178.5 (диаметр 12 мм, длина 178,5 м)&#10;10-70.8-14-96.85 (диаметр 10 мм, длина 70,8 м&#10;и диаметр 14 мм, длина 96,85 м)&#10;&#10;Пример для шапки таблицы:&#10;Спецификация арматуры на перекрытие на отм. +18,200 (лист 4)&#10;&#10;Внимание!&#10;Имя файла не должно содержать следующих символов:&#10;\  /  :  *  ?  &quot;  &lt;  &gt;  |" textAlignment="CENTER" textFill="WHITE">
-                     <font>
-                        <Font name="System Bold" size="16.0" />
-                     </font>
-                  </Label>
                   <TextField fx:id="fileName" layoutX="206.0" layoutY="535.0" prefHeight="25.0" prefWidth="400.0" promptText="Введите название файла (по-умолч. будет дата и время создания)" />
                </children></AnchorPane>
       </content>
@@ -284,7 +279,7 @@
             </AnchorPane>
         </content>
       </Tab>
-      <Tab text="Сводная ведомость, ручной ввод">
+      <Tab text="Ручной ввод">
         <content>
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                <children>
@@ -379,7 +374,7 @@
       </Tab>
       <Tab text="Внешний вид">
         <content>
-          <AnchorPane fx:id="testT" layoutY="287.0" minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+          <AnchorPane layoutY="287.0" minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                <children>
                   <Circle fx:id="circle3" fill="#ababab" layoutX="400.0" layoutY="110.0" onMouseClicked="#setBackgroundColor3" radius="35.0" stroke="RED" strokeType="INSIDE" strokeWidth="3.0" />
                   <Circle fx:id="circle5" layoutX="600.0" layoutY="110.0" onMouseClicked="#setBackgroundColor5" radius="35.0" stroke="RED" strokeType="INSIDE" strokeWidth="3.0" />
