Ver.0.5.6b. Separated arrow components.

--- a/src/armaturkin/fxml/Main.fxml
+++ b/src/armaturkin/fxml/Main.fxml
@@ -8,11 +8,9 @@
 <?import javafx.scene.control.Tab?>
 <?import javafx.scene.control.TabPane?>
 <?import javafx.scene.control.TextField?>
-<?import javafx.scene.effect.GaussianBlur?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.shape.Circle?>
-<?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
@@ -117,23 +115,8 @@
     </Tab>
       <Tab text="Посчитать сводную ведомость">
         <content>
-          <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+          <AnchorPane fx:id="anchorPane3" minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                <children>
-                  <Line fx:id="redirectLine" endX="69.0" endY="147.0" stroke="#4097f5" strokeWidth="7.0">
-                     <effect>
-                        <GaussianBlur radius="11.5" />
-                     </effect>
-                  </Line>
-                  <Line fx:id="arrowLine1" endX="159.0" endY="557.0" startX="171.0" startY="522.0" stroke="#4097f5" strokeWidth="7.0">
-                     <effect>
-                        <GaussianBlur radius="11.5" />
-                     </effect>
-                  </Line>
-                  <Line fx:id="arrowLine2" endX="190.0" endY="551.0" startX="175.0" startY="523.0" stroke="#4097f5" strokeWidth="7.0">
-                     <effect>
-                        <GaussianBlur radius="11.5" />
-                     </effect>
-                  </Line>
                   <Label fx:id="summaryDropSpace1" alignment="CENTER" layoutX="10.0" layoutY="32.0" onDragDropped="#summaryDragDropped1" onDragOver="#summaryDragOver" onMouseClicked="#click1" prefHeight="115.0" prefWidth="385.0" text="summaryLabel1" textAlignment="CENTER">
                      <opaqueInsets>
                         <Insets />
@@ -428,6 +411,11 @@
                      <font>
                         <Font name="System Bold" size="16.0" />
                      </font></Button>
+                  <Button fx:id="testButton" layoutX="371.0" layoutY="267.0" mnemonicParsing="false" onAction="#doTest" text="TEST">
+                     <font>
+                        <Font name="System Bold" size="16.0" />
+                     </font>
+                  </Button>
                </children>
             </AnchorPane>
         </content>
